--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -17,6 +18,7 @@
             <li><a href="#about">about</a></li>
             <li><a href="#contact">contact</a></li>
         </ul>
+    </nav>    
     <main>
         <section class="presentation to our restaurant">
             <h2>
@@ -70,8 +72,8 @@
         </section>
         <section class="contact">
             <h2>Contact</h2>
-            <form>
-                <div class="name">
+            <form> 
+                 <div class="name">
                 <label for ="name">name:</label>
                 <input type="text"name="name" required minlength="4"/>
                 </div>
@@ -84,7 +86,8 @@
                 <input type="text"E-mail="E-mail" required minlength="4"/>
                 </div>
                 <button type="submit">Sumbit</button
-            </form>        
+               </form>
+                
     </main>
     <footer>number:055184762</footer>    
 </body>
